# artagon-workflows

./: .gitignore  .gitmodules  .shellcheckrc  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPILOT.md  LICENSE  MIGRATION_v2.md  README.md  RELEASE.md  SBOM.md  TESTING_INSTRUCTIONS.md
.agents/: README.md
.agents/claude/: preferences.md
.agents/codex/: preferences.md  project-context.md
.agents/context/: glossary.md
.agents/policies/: guardrails.md  release-checklist.md
.agents/skills/: README.md  code-fixer.md  (+5 more)
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  TOPICS.md  copilot-instructions.md  copilot-review-instructions.md  dependabot.yml  labels.yml
.legal/: IMPLEMENTATION-GUIDE.md  README-LICENSE-SECTION.md
.model-context/: ACTION_VERSIONS.md  REPOSITORY_STRATEGY.md  SBOM_IMPLEMENTATION.md  SBOM_REQ.md  SECURITY_AUDIT.md  SECURITY_IMPLEMENTATION_PLAN.md  TESTING_STRATEGY.md  TEST_REPOSITORIES.md  context.md  instructions.md
docs/: BAZEL.md  CPACK_PACKAGING.md  CPP.md  GRADLE.md  MAVEN.md  NAMING_CONVENTIONS.md  OSS_RELEASE_STRATEGIES.md  RELEASE.md  RELEASE_C.md  RELEASE_CPP.md  RELEASE_JAVA.md  RELEASE_RUST.md  TESTING.md  WORKFLOWS_USAGE.md
openspec/: AGENTS.md  contributing.md  project.md
test/: README.md
test/fixtures/bazel/: BUILD.bazel  WORKSPACE
test/fixtures/bazel/src/: greeter.cc  greeter.h  greeter_test.cc  main.cc
test/fixtures/cmake_c/: CMakeLists.txt
test/fixtures/cmake_c/src/: main.c  test.c
test/fixtures/cmake_cpp/: CMakeLists.txt
test/fixtures/cmake_cpp/src/: main.cpp  test.cpp
(+155 files in other folders)
