cc_library(
    name = "greeter",
    srcs = ["src/greeter.cc"],
    hdrs = ["src/greeter.h"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "hello",
    srcs = ["src/main.cc"],
    deps = [":greeter"],
)

cc_test(
    name = "greeter_test",
    size = "small",
    srcs = ["src/greeter_test.cc"],
    deps = [":greeter"],
)
